垃圾收集器验证